--- a/readRDF_example.ipynb
+++ b/readRDF_example.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "hdr, adf = readRDF(\"/home/indujaa/Projects/magellantools/adf00376.lbl\")"
+    "hdr, adf = readARCDR(\"/home/indujaa/Projects/magellantools/adf00376.lbl\")"
    ]
   },
   {
